--- a/src/component/BestInClass/BestInClass.css
+++ b/src/component/BestInClass/BestInClass.css
@@ -8,7 +8,7 @@
 }
 
 .best-card {
-  background-color: #00d779;
+  background-color: #737b25;
   border-radius: 20px;
   padding: 40px;
   color: white;
