--- a/src/component/navbar/nav.css
+++ b/src/component/navbar/nav.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #000;
-  --secondary-color: #39ff14;
+  --secondary-color: #737b25;
   --text-color: #333;
   --white: #fff;
   --gray-light: #f5f5f5;
