--- a/src/component/Franchise/SportsFranchise.css
+++ b/src/component/Franchise/SportsFranchise.css
@@ -9,13 +9,13 @@
   margin: auto;
 }
 
-.hero-section {
+.hero-section1 {
   text-align: center;
   padding: 30px 20px;
   margin-top: 100px;
 }
 
-.hero-section h1 {
+.hero-section1 h1 {
   font-size: 32px;
   font-weight: 700;
 
@@ -28,7 +28,7 @@
 .highlight1 {
   color: #737b25;
 }
-.hero-section p {
+.hero-section1 p {
   font-size: 18px;
   margin-top: 10px;
   max-width: 800px;
