--- a/src/component/SportsInfra/InfrastructureServices.css
+++ b/src/component/SportsInfra/InfrastructureServices.css
@@ -4,6 +4,10 @@
 /* General Styles */
 .infrastructure-services {
   margin-top: 110px;
+  margin: 120px auto 20px auto;
+  padding: 0 15px;
+  
+max-width: 1500px;
 }
 
 .container,
