--- a/src/component/about/JoinTribeForm.css
+++ b/src/component/about/JoinTribeForm.css
@@ -3,10 +3,10 @@
 
 .join-tribe-page {
   font-family: "Nunito", sans-serif;
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
   color: #333;
-  margin-top: 170px;
+  margin: 160px auto 20px auto;
   padding: 0 16px;
 }
 
