--- a/src/component/service/ServicePage.css
+++ b/src/component/service/ServicePage.css
@@ -4,16 +4,21 @@
 .service-page {
     font-family: 'Nunito', sans-serif;
     color: #1a1a1a;
-    margin-top: 170px;
+    margin: 170px auto 20px auto;
+    padding: 0 15px;
+    
+max-width: 1500px;
+
   }
   
   /* Stats Section */
   .stats-section {
     display: flex;
     flex-wrap: wrap;
-    border-radius: 30px;
+    border-radius: 30px ;
     overflow: hidden;
-padding: 10px;
+
+
   }
   
   .stats-left {
@@ -21,6 +26,7 @@ padding: 10px;
     background-color: #737b25;
     color: #fff;
     display: grid;
+   
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 40px;
     gap: 30px;
